--- a/ze_deadcore_v1_3_w5.cfg
+++ b/ze_deadcore_v1_3_w5.cfg
@@ -7,7 +7,7 @@
 ; -> Change game_text channel
 ; -> Set maximum HP of D boss
 ; -> Modify basement and adding HP of D boss
-; -> The fade will not occur until they get off if zombies get on the last platform 
+; -> The fade will not occur until zombies get off if they get on the last platform
 ; Insane D will be selected after Normal D automatically
 ; List of music and CC what you need
 ; -> sound/music/infinity/deadcorew5/music_d1_ex.mp3
