--- a/ze_deadcore_v1_3_w5.cfg
+++ b/ze_deadcore_v1_3_w5.cfg
@@ -1686,6 +1686,8 @@ add:
     "OnTrigger" "escape_press1_core2Close9.6-1"
     "OnTrigger" "escape_press1_core2SetSpeed20000-1"
     "OnTrigger" "escape_press1_core2SetSpeed14509.6-1"
+    "OnTrigger" "KillnadeTimerEnable9.6-1"
+    "OnTrigger" "KillnadeTimerDisable19.05-1"
     "OnTrigger" "escape_press_speed_triggerEnable9.3-1"
 }
 
