--- a/ze_deadcore_v1_3_w5.cfg
+++ b/ze_deadcore_v1_3_w5.cfg
@@ -4503,7 +4503,7 @@ add:
 {
     "model" "*124"
     "origin" "-14928 -14992 -16200"
-    "targetname" "button_d_insane"
+    "targetname" "button_d_redcore"
     "classname" "func_button"
     "spawnflags" "1057"
     "speed" "5"
@@ -4542,7 +4542,6 @@ add:
     "OnTrigger" "Level_TextAddOutputcolor 255 60 600-1"
     "OnTrigger" "invertEnable01"
 }
-
 
 ; RHYTHMCORE button
 add:
